--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "streming-demo",
-  "version": "0.1.0",
+  "name": "stream-ui",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "vite",
     "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.0.5"
+    "@types/node": "^20.3.2",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.9"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
