🚧 Conexión a servidor de ws

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,10 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vite/client", "node"],
   },
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
