--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "socket.io-client": "^4.7.1"
+    "@types/uuid": "^9.0.2",
+    "socket.io-client": "^4.7.1",
+    "uuid": "^9.0.0"
   }
 }
